force-app/main/default/objects/ContractPenalties__c/ContractPenalties__c.object-meta.xml
<CustomObject>
    <description>Used  to see the penalties that have been applied to each contract because The AA haven&apos;t met their SLAs
Enablling users and managers to keep a track of the penalties and use the information when I am speaking to my manager.</description>
    <label>Contract Penalty</label>
    <nameField>
        <displayFormat>CP-{yyyy}{00000}</displayFormat>
        <label>Contract Penalty</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Penalties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>