force-app/main/default/objects/ContractPenalties__c/fields/Actual_amount_enforced__c.field-meta.xml
<CustomField>
    <fullName>Actual_amount_enforced__c</fullName>
    <description>Requirement to enter the actual amount paid for a penalty as it may not be the full amount initially being sought by the Customer</description>
    <inlineHelpText>Enter the actual Contract Penalty amount agreed to be paid for this period</inlineHelpText>
    <label>Actual amount enforced</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>