force-app/main/default/objects/ContractPenalties__c/fields/Date_of_penalty__c.field-meta.xml
<CustomField>
    <fullName>Date_of_penalty__c</fullName>
    <inlineHelpText>The date of the penalty</inlineHelpText>
    <label>Date of penalty</label>
    <type>Date</type>
</CustomField>