force-app/main/default/objects/ContractPenalties__c/fields/Financial_Amount_of_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Financial_Amount_of_Penalty__c</fullName>
    <inlineHelpText>The financial amount the penalty would cost</inlineHelpText>
    <label>Financial Amount of Penalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>