force-app/main/default/objects/ContractPenalties__c/fields/Penalty_Enforced__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Enforced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether the penalty was enforced or not by the client.</inlineHelpText>
    <label>Penalty Enforced?</label>
    <type>Checkbox</type>
</CustomField>