force-app/main/default/objects/ContractPenalties__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>The effective start date for the Contract Penalty.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>