force-app/main/default/objects/ContractPenalties__c/validationRules/Penalty_Not_Enforced.validationRule-meta.xml
<ValidationRule>
    <fullName>Penalty_Not_Enforced</fullName>
    <active>true</active>
    <description>If the penalty wasnt enforced what was the reason</description>
    <errorConditionFormula>NOT ( Penalty_Enforced__c ) &amp;&amp;  ISBLANK( Penalty_Not_Enforced_Reason__c )</errorConditionFormula>
    <errorDisplayField>Penalty_Not_Enforced_Reason__c</errorDisplayField>
    <errorMessage>Please provide a reason the penalty was not enforced.</errorMessage>
</ValidationRule>