force-app/main/default/objects/ContractPenalties__c/validationRules/Service_Type_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Type_Other</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES(Service_Issue__c, &quot;Other&quot;) &amp;&amp;  ISBLANK(Service_Issue_Other__c)</errorConditionFormula>
    <errorDisplayField>Service_Issue_Other__c</errorDisplayField>
    <errorMessage>You selected &apos;Other&apos;, please specify the service from The AA which caused this issue.</errorMessage>
</ValidationRule>